# jointrank

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
conf/: base.yaml  top1000shuffle.yaml
conf/datasets/: beir-dbpedia-entity.yaml  beir-nfcorpus.yaml  beir-robust04.yaml  beir-scifact.yaml  beir-signal1m.yaml  beir-trec-covid.yaml  beir-trec-news.yaml  beir-webis-touche2020.yaml  dl19.yaml
conf/llm/: gpt-4.1-mini.yaml  mistral24b.yaml  mistral7b.yaml
conf/models/: fullcontext-listwise.yaml  joint.yaml  joint10.yaml  oracle.yaml  setwise.yaml  sliding.yaml  sliding10.yaml  topdown.yaml  topdown10.yaml  tourrank.yaml
conf/models1000/: joint.yaml  setwise.yaml  sliding.yaml  topdown.yaml
jointrank/aggregation/: base.py  rc.py  tournament.py
jointrank/blocks/: comparisons.py  design.py
jointrank/evaluation/: cfg.py  data.py  reranker_factory.py  run_bench.py
jointrank/evaluation/synthetic/: common.py  coverage.py  metrics.py  oracle.py  run.py
jointrank/model/: reranker_base.py
jointrank/model/joint/: joint.py  listwise.py  listwise_logits.py
jointrank/model/llm/: abcasync.py  base.py  openai.py  telemetry.py  together.py  tokenization.py
jointrank/model/reproducings/: rankgpt.py  setwise.py  sliding.py  topdown.py  tourrank.py
scripts/: coverage.sh  eval_beir.sh  eval_trec.sh  oracle.sh  prepare_beir.sh  prepare_dl19.sh  rerank_beir.sh  rerank_trec.sh
