[project]
name = "jointrank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "evalica>=0.3.2",
    "ftfy>=6.3.1",
    "ir-datasets>=0.5.10",
    "more-itertools>=10.7.0",
    "openai>=1.84.0",
    "pandas>=2.3.0",
    "pyserini>=1.0.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.13",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "together>=1.5.8",
    "tokenizers>=0.21.1",
]
